fixed padding on tablet viewport

--- a/style.css
+++ b/style.css
@@ -196,12 +196,16 @@ h3.title {
         justify-content: center;
         align-items: center;
         max-width: 1280px;
+        padding: 1rem 2rem;
     }
 
     .mockupWrapper,
     .intro,
     .education {
         max-width: 600px;
+    }
+    .education {
+        padding: 2rem;
     }
 }
 
